Sat Oct 30 01:30:46 2010                        Michael Jennings (mej)

Add copyrights to perl modules.
----------------------------------------------------------------------
Sat Oct 30 17:29:40 2010                                           gmk

Renamed the Node and NodeSet classes to be a more general Object and
ObjectSet interface. Also added the ability to add to the Object and
ObjectSet via a hash or array of hashes (respectively) as well as
be able to find or iterate through the ObjectSet object.
----------------------------------------------------------------------
Sun Oct 31 22:45:08 2010                        Michael Jennings (mej)

Tidying as I peruse, putting together an action plan.
----------------------------------------------------------------------
Wed Nov 10 13:40:53 2010                        Michael Jennings (mej)

Initial refactoring of existing Object parent class.  More methods to
come, and need to do search-and-replace to fix breakage.
----------------------------------------------------------------------
Wed Nov 10 20:39:04 2010                        Michael Jennings (mej)

A couple more template methods.
----------------------------------------------------------------------
Thu Nov 11 00:11:52 2010                        Michael Jennings (mej)

Object documentation improvements and reformatting.
----------------------------------------------------------------------
Thu Nov 11 00:27:41 2010                        Michael Jennings (mej)

More touchups and documentation.
----------------------------------------------------------------------
Wed Dec  8 16:04:27 2010                        Michael Jennings (mej)

Make serialize() and unserialize() proper methods.
----------------------------------------------------------------------
Wed Dec  8 18:02:54 2010                        Michael Jennings (mej)

Minor cleanups.
----------------------------------------------------------------------